samples/_failures_safe/1761040602_3b335d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9abc12ff.c: In function ‘main’:
./samples/SAFE/__tmp_9abc12ff.c:173:5: error: expected expression at end of input
  173 |     if (fgets(input, sizeof(input), stdin) == NULL)
      |     ^~
./samples/SAFE/__tmp_9abc12ff.c:173:5: error: expected declaration or statement at end of input
